assets/css/styles.css
/* ... */
.book_card {
    font-size: 1rem;
    background-color: var(--white_color);
    height: 60em;
    padding: 2em 2.6em;
    border-radius: var(--book_card_border_radius);
    box-shadow: var(--book_card_box_shadow);
    transition: transform 360ms ease, box-shadow 200ms ease;

    display: grid;
    grid-template-rows: 9fr 3fr 1fr;
    gap: 1.2em;
}

.book_card:hover {
    transform: scale(1.02);
    box-shadow: var(--book_card_box_shadow_hover);
}

.book_cover_img_wrapper {
    place-self: center;
    border: 2px solid var(--black_text);
    font-size: 1rem;
    height: calc(var(--book_card_img_height) + 4px);
    max-width: 270px;
    overflow: hidden;

    display: flex;
    justify-content: center;
    align-items: center;
}

.book_img {
    font-size: 1rem;
    height: var(--book_card_img_height);
    aspect-ratio: 1.4 / 2;
    object-fit: cover;
    object-position: center;
}

.book_info {
    font-size: 1rem;
    margin-top: 0.6em;
}

.book_title {
    margin: 0;
    font-size: 2.6rem;
    font-weight: 600;
    color: var(--black_text);
    max-width: var(--book_card_maxwidth_for_text);

    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.book_author_wrapper {
    font-size: 1rem;
    margin: 0.4em 0;
    max-width: var(--book_card_maxwidth_for_text);

    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.book_author_wrapper,
.book_pages_wrapper {
    display: block;
    font-size: 1.4rem;
    color: var(--black_text);
    max-width: var(--book_card_maxwidth_for_text);
}

.book_author,
.book_author > *,
.book_pages {
    font-family: 'Averia Serif Libre';
    color: var(--black_text);
    font-size: 1.8rem;
    font-weight: 500;
}

.book_author {
    padding-left: 0.4em;
}

.book_author:hover > * {
    color: var(--primary_color);
}

.book_pages {
    padding-right: 0.4em;
}

.book_controller {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.book_left_controller {
    display: flex;
    align-items: center;
}

.book_controller_btn {
    height: 3rem;
    font-size: 1rem;
    color: var(--black_text);
    margin: 1em;
    cursor: pointer;
    transition: transform 360ms ease;
}

.book_controller_btn:hover {
    color: var(--primary_color);
    transform: scale(1.1);
}

.book_edit_btn {
    margin-left: 0;
}

.book_favorite_btn.active {
    color: var(--book_favorite_red_color);
}

.book_read_btn.active {
    color: var(--book_read_green_color);
}

.book_delete_btn {
    margin-right: 0;
    color: var(--book_del_red_color);
}

.book_delete_btn:hover {
    color: var(--book_favorite_red_color);
}
/* ==================================== */
/* END MAIN CONTENT SECTION */
/* ==================================== */

/* ==================================== */
/* BEGIN MODAL SECTION */
/* ==================================== */
.modal_wrapper {
    position: absolute;
    background-color: var(--modal_background_color);
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    z-index: 100;
    opacity: 1;
    animation: appear 660ms ease;
    display: block;

    display: grid;
    grid-template-columns: 2fr 8fr 2fr;
    grid-template-rows: 1fr 16fr 1fr;
}

.modal_wrapper.hide {
    display: none;
    opacity: 0;
    animation: vanish 660ms ease;
}

@keyframes appear {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@keyframes vanish {
    from {
        opacity: 1;
        display: block;
    }
    to {
        opacity: 0;
        display: none;
    }
}

.modal {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    background-color: var(--white_color);
    font-size: 1rem;
    padding: 2.4em 4.6em;
    border-radius: var(--book_card_border_radius);

    position: relative;
    display: grid;
    grid-template-areas: 'form';
}

.modal_form {
    grid-area: form;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 2fr 10fr 1fr;
    gap: 3.6em;
}

.form_title {
    font-size: 4.6rem;
    color: var(--black_text);
    font-weight: 700;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;

    grid-column: 1 / span 2;
}

.basic_info {
    grid-column: 1 / 2;
    grid-row: 2 / 3;

    display: grid;
    grid-template-rows: repeat(6, 1fr);
}

.basic_info,
.extra_info {
    font-size: 1rem;
    border: 2px solid var(--dark_gray_color);
    border-radius: 12px;
    padding: 1em 2.4em;
}

.basic_info legend,
.extra_info legend {
    font-size: 1.8rem;
    font-family: 'Averia Serif Libre';
    color: var(--black_text);
    font-weight: 500;
    padding: 0.2em 0.6em;
    margin-left: 0.2em;
}

.form_inp_label {
    font-size: 1.8rem;
    display: block;
}

.form_inp_label span {
    color: var(--book_favorite_red_color);
    font-size: 2rem;
}

.form_book_inp {
    display: block;
    font-size: 1.6rem;
    padding: 0.4em 0.4em;
    color: var(--black_text);
    margin-top: 0.26em;
    width: 94%;
    border-radius: 6px;
    border: 2px solid var(--dark_gray_color);
    outline: none;
}

.form_book_inp::placeholder {
    color: var(--dark_gray_color);
}

.form_book_inp:focus,
.form_book_inp.invalid:focus {
    border-color: var(--primary_color);
}

.form_book_inp.invalid {
    border-color: var(--book_del_red_color);
}

.extra_info {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    padding: 1em 0.2em 1em 2.4em;

    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 8fr 1fr;
    gap: 1em;
}

.display_book_img_inp_wrapper {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
    max-width: 302px;
    max-height: 400px;
    border: 2px solid var(--black_text);
    overflow: hidden;
}

.display_book_img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    object-position: center;
    aspect-ratio: 1.4 / 2;
}
/* ... */

